# hacky-tree-sitter-lhaskell

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-lhaskell.h  tree-sitter-lhaskell.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lhaskell/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLhaskellTests/: TreeSitterLhaskellTests.swift
queries/: injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: code-block-after-tex.lhs  code-block-all-over-tex.lhs  code-block-before-tex.lhs  code-block-in-tex.lhs  lone-code-block-multiple-lines.lhs  lone-code-block.lhs  lone-empty-code-block.lhs  multiple-code-blocks.lhs  only-tex.lhs
